--- a/client/src/assets/styles/calculatrice.scss
+++ b/client/src/assets/styles/calculatrice.scss
@@ -1,3 +1,5 @@
+@import "variables.scss";
+
 .main {
   display: flex;
   align-items: center;
@@ -8,13 +10,15 @@
 
 .container-calculatrice {
   display: flex;
-  padding: 20px;
+  padding: 30px;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  width: 600px;
-  height: 90%;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  width: 400px;
+  height: 80%;
+  background-color: $calculatrice-bg;
+  border-radius: 15px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .container-input {
@@ -22,15 +26,19 @@
   display: flex;
   align-items: center;
   width: 100%;
+  background-color: $main-input-bg;
+  color: $main-input-color;
+  border: 3px inset;
+  border-radius: 3px;
 }
 
 .input-calculatrice {
   width: 100%;
-  margin: 20px;
+  padding: 20px;
   text-align: center;
   border: none;
-  background-color: transparent;
-  font-size: 35px;
+  background: transparent;
+  font-size: 20px;
 }
 
 .container-lower-part {
@@ -38,14 +46,16 @@
   align-items: center;
   height: 100%;
   width: 100%;
+  margin-top: 30px;
 }
 
 .container-keyboard {
   display: grid;
+  gap: 15px 10px;
   grid-template-columns: repeat(3, 1fr);
   width: 100%;
   height: 100%;
-  margin: 20px;
+  margin: 20px 20px 20px 0px;
 }
 
 .container-calculation-buttons {
@@ -98,5 +108,11 @@
 }
 
 .result-span {
-  font-size: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  padding: 20px;
+  width: 100px;
+  font-family: $main-input-font-family;
 }
